--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,14 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.metrics import pairwise_distances"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect to Neo4j database\n"
    ]
   },
   {
@@ -25,6 +33,14 @@
     "password = 'Jaehyun14*'\n",
     "\n",
     "conn = GraphDatabase.driver(host,auth=(username,password))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Input the title"
    ]
   },
   {
@@ -76,8 +92,8 @@
     "    count_vec = CountVectorizer(binary=True)\n",
     "    genre_matrix = count_vec.fit_transform(genres).todense()\n",
     "    np_array = np.asarray(genre_matrix)\n",
-    "    # similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
-    "    similarity_matrix = pairwise_distances.cosine_similarity(np_array,)\n",
+    "    similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
+    "    # similarity_matrix = pairwise_distances.cosine_similarity(np_array,)\n",
     "    title_index = None\n",
     "    for i, (title, _, _,_,_) in enumerate(empList):\n",
     "        if title == inputText :\n",
@@ -112,6 +128,14 @@
     "\n",
     "# print(recList)\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results"
    ]
   },
   {
