--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from neo4j import GraphDatabase\n",
-    "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "from sklearn.metrics.pairwise import pairwise_distances,cosine_similarity\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.metrics import pairwise_distances"
+    "# from sklearn.metrics import pairwise_distances"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,23 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 0. 1. 1. 1. 1. 1. 1. 0.]\n",
-      "[1. 0. 0. 1. 1. 1. 1. 1. 1. 0.]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.10/site-packages/sklearn/metrics/pairwise.py:2025: DataConversionWarning: Data was converted to boolean for metric jaccard\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
+      "[1.         1.         1.         1.         0.29289322 1.\n",
+      " 1.         0.         0.42264973 1.        ]\n"
      ]
     }
    ],
@@ -92,8 +84,8 @@
     "    count_vec = CountVectorizer(binary=True)\n",
     "    genre_matrix = count_vec.fit_transform(genres).todense()\n",
     "    np_array = np.asarray(genre_matrix)\n",
-    "    similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
-    "    # similarity_matrix = pairwise_distances.cosine_similarity(np_array,)\n",
+    "    # similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
+    "    similarity_matrix = 1 - cosine_similarity(np_array)\n",
     "    title_index = None\n",
     "    for i, (title, _, _,_,_) in enumerate(empList):\n",
     "        if title == inputText :\n",
@@ -140,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(('Tsurune Movie: Hajimari no Issha', 'Sports', 6.96, 'Kyoto Animation', 'Movie'), 0.0)\n",
-      "(('Extreme Hearts', 'Sports', 6.52, 'Seven Arcs', 'TV Show'), 0.0)\n",
+      "(('Uncle from Another World', 'Comedy, Fantasy', 7.88, 'AtelierPontdarc', 'TV Show'), 0.29289321881345254)\n",
+      "(('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.42264973081037416)\n",
       "(('Laid-Back Camp: The Movie', 'Slice of Life', 8.48, 'C-Station', 'Movie'), 1.0)\n",
-      "(('Classroom of the Elite II', 'Psychological, School, Drama, Suspense', 8.14, 'Lerche', 'TV Show'), 1.0)\n"
+      "(('Backflip!! Movie', 'Sports', 6.68, 'Zexcs', 'Movie'), 1.0)\n"
      ]
     }
    ],
@@ -159,6 +151,8 @@
     "    del i[0]\n",
     "    for items in i:\n",
     "        print(items)\n",
+    "\n",
+    "        \n",
     "    "
    ]
   }
