change cosine method

--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.         1.         1.         1.         0.29289322 1.\n",
-      " 1.         0.         0.42264973 1.        ]\n"
+      "[0.         0.         0.         0.         0.70710678 0.\n",
+      " 0.         1.         0.57735027 0.        ]\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
     "    genre_matrix = count_vec.fit_transform(genres).todense()\n",
     "    np_array = np.asarray(genre_matrix)\n",
     "    # similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
-    "    similarity_matrix = 1 - cosine_similarity(np_array)\n",
+    "    similarity_matrix = cosine_similarity(np_array)\n",
     "    title_index = None\n",
     "    for i, (title, _, _,_,_) in enumerate(empList):\n",
     "        if title == inputText :\n",
@@ -132,23 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(('Uncle from Another World', 'Comedy, Fantasy', 7.88, 'AtelierPontdarc', 'TV Show'), 0.29289321881345254)\n",
-      "(('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.42264973081037416)\n",
-      "(('Laid-Back Camp: The Movie', 'Slice of Life', 8.48, 'C-Station', 'Movie'), 1.0)\n",
-      "(('Backflip!! Movie', 'Sports', 6.68, 'Zexcs', 'Movie'), 1.0)\n"
+      "(('Laid-Back Camp: The Movie', 'Slice of Life', 8.48, 'C-Station', 'Movie'), 0.0)\n",
+      "(('Backflip!! Movie', 'Sports', 6.68, 'Zexcs', 'Movie'), 0.0)\n",
+      "(('Tsurune Movie: Hajimari no Issha', 'Sports', 6.96, 'Kyoto Animation', 'Movie'), 0.0)\n",
+      "(('Classroom of the Elite II', 'Psychological, School, Drama, Suspense', 8.14, 'Lerche', 'TV Show'), 0.0)\n",
+      "(('Call of the Night', 'Comedy, Romance, Shounen, Interspecies Relationship, NEET, Non-Human Protagonists, Psychological', 8.02, 'LIDEN FILMS', 'TV Show'), 0.0)\n"
      ]
     }
    ],
    "source": [
     "for i in recList:\n",
-    "    del i[0]\n",
+    "    # del i[0]\n",
     "    for items in i:\n",
     "        print(items)\n",
     "\n",
