add data from database

--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         0.         0.         0.         0.70710678 0.\n",
-      " 0.         1.         0.57735027 0.        ]\n"
+      "[0.         0.         0.         1.         0.         0.15811388\n",
+      " 0.         0.         0.         0.         0.25       0.18898224\n",
+      " 0.         0.         0.25       0.         0.         0.28867513\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.        ]\n"
      ]
     }
    ],
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,10 +143,10 @@
      "output_type": "stream",
      "text": [
       "(('Laid-Back Camp: The Movie', 'Slice of Life', 8.48, 'C-Station', 'Movie'), 0.0)\n",
-      "(('Backflip!! Movie', 'Sports', 6.68, 'Zexcs', 'Movie'), 0.0)\n",
-      "(('Tsurune Movie: Hajimari no Issha', 'Sports', 6.96, 'Kyoto Animation', 'Movie'), 0.0)\n",
-      "(('Classroom of the Elite II', 'Psychological, School, Drama, Suspense', 8.14, 'Lerche', 'TV Show'), 0.0)\n",
-      "(('Call of the Night', 'Comedy, Romance, Shounen, Interspecies Relationship, NEET, Non-Human Protagonists, Psychological', 8.02, 'LIDEN FILMS', 'TV Show'), 0.0)\n"
+      "(('Chibiham, Juicy & Me', 'Comedy', 'N/A', 'N/A', 'Movie'), 0.0)\n",
+      "(('My Precious Lunch', 'Action, Fantasy', 6.35, 'N/A', 'Movie'), 0.0)\n",
+      "(('Rainbow Sea Fly High', 'Adventure, Fantasy, Sci-Fi', 'N/A', 'N/A', 'Movie'), 0.0)\n",
+      "(('Delicious Party♡Precure Movie: Yume Miru Oko-sama Lunch!', 'Action, Fantasy', 6.54, 'Toei Animation', 'Movie'), 0.0)\n"
      ]
     }
    ],
