change output sort

--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,19 +53,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Processing......*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         0.         0.         1.         0.         0.15811388\n",
-      " 0.         0.         0.         0.         0.25       0.18898224\n",
-      " 0.         0.         0.25       0.         0.         0.28867513\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.        ]\n"
+      "[0.         0.         0.         0.18898224 0.53452248 0.11952286\n",
+      " 0.26726124 0.37796447 0.65465367 0.         0.75592895 1.\n",
+      " 0.         0.37796447 0.18898224 0.         0.         0.21821789\n",
+      " 0.26726124 0.37796447 0.21821789 0.21821789 0.65465367 0.\n",
+      " 0.53452248 0.37796447 0.53452248 0.37796447 0.65465367 0.        ]\n"
      ]
     }
    ],
@@ -85,43 +93,27 @@
     "    genres = [genre for _, genre, _, _ ,_ in empList]\n",
     "\n",
     "    count_vec = CountVectorizer(binary=True)\n",
-    "    genre_matrix = count_vec.fit_transform(genres).todense()\n",
-    "    np_array = np.asarray(genre_matrix)\n",
-    "    # similarity_matrix = pairwise_distances(np_array, metric='jaccard')\n",
-    "    similarity_matrix = cosine_similarity(np_array)\n",
+    "    matrix = count_vec.fit_transform(genres).todense()\n",
+    "    np_array = np.asarray(matrix)\n",
+    "\n",
+    "    similarity_matrix =  cosine_similarity(np_array)\n",
     "    title_index = None\n",
     "    for i, (title, _, _,_,_) in enumerate(empList):\n",
     "        if title == inputText :\n",
     "            title_index = i\n",
     "            break\n",
-    "    if title_index is None:\n",
-    "        print(\"Show not found\")\n",
     "\n",
-    "    # print(genre_matrix)\n",
     "    similarity_scores = similarity_matrix[title_index]\n",
     "    print(similarity_matrix[title_index])\n",
     "    \n",
-    "    # print(similarity_matrix[title_index])\n",
-    "    top_indices = similarity_scores.argsort()[::1][:5]\n",
+    "    top_indices = similarity_scores.argsort()[::1][:-7:-1]\n",
     "    recList = []\n",
     "    \n",
-    "    # for i in top_indices:\n",
-    "    #     recommendations = (empList[i[0]],similarity_scores[i[0]])\n",
-    "    #     # total_recs = recommendations\n",
-    "    #     recList.append(recommendations)\n",
-    "    #     if len(recList)>=3:\n",
-    "    #         break\n",
-    "\n",
-    "\n",
     "    recommendation = [(empList[i], similarity_scores[i]) for i in top_indices]\n",
     "    recList.append(recommendation)\n",
     "\n",
-    "    # recommendations = [(empList[i],similarity_scores[i]) for i in top_indices]\n",
+    "    recommendations = recList[-6:]\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(recList)\n",
     "\n"
    ]
   },
@@ -135,26 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(('Laid-Back Camp: The Movie', 'Slice of Life', 8.48, 'C-Station', 'Movie'), 0.0)\n",
-      "(('Chibiham, Juicy & Me', 'Comedy', 'N/A', 'N/A', 'Movie'), 0.0)\n",
-      "(('My Precious Lunch', 'Action, Fantasy', 6.35, 'N/A', 'Movie'), 0.0)\n",
-      "(('Rainbow Sea Fly High', 'Adventure, Fantasy, Sci-Fi', 'N/A', 'N/A', 'Movie'), 0.0)\n",
-      "(('Delicious Party♡Precure Movie: Yume Miru Oko-sama Lunch!', 'Action, Fantasy', 6.54, 'Toei Animation', 'Movie'), 0.0)\n"
+      "[('Lucifer and the Biscuit Hammer', 'Action, Adventure, Comedy, Drama', 5.64, 'NAZ', 'TV Show'), 0.7559289460184544]\n",
+      "[('Shanhai Jing: Zaijian Gaoshou', 'Adventure, Comedy, Fantasy', 'N/A', 'N/A', 'Movie'), 0.6546536707079772]\n",
+      "[('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.6546536707079772]\n",
+      "[('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.6546536707079772]\n",
+      "[('My Precious Lunch', 'Action, Fantasy', 6.35, 'N/A', 'Movie'), 0.5345224838248487]\n"
      ]
     }
    ],
    "source": [
-    "for i in recList:\n",
-    "    # del i[0]\n",
+    "for i in recommendations:\n",
+    "    del i[0]\n",
     "    for items in i:\n",
-    "        print(items)\n",
+    "        items = list(items)\n",
+    "        show = items\n",
+    "        print(show)\n",
     "\n",
     "        \n",
     "    "
