--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "from sklearn.metrics.pairwise import pairwise_distances,cosine_similarity\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "import numpy as np\n",
-    "\n",
+    "from flask import jsonify\n",
+    "from difflib import SequenceMatcher\n",
+    "import os\n",
     "# from sklearn.metrics import pairwise_distances"
    ]
   },
@@ -24,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
-    "host = 'bolt://localhost:7687'\n",
-    "username = 'neo4j'\n",
-    "password = 'Jaehyun14*'\n",
+    "host = os.environ['HOST']\n",
+    "username = os.environ[\"USERNAME\"]\n",
+    "password = os.environ[\"PASSWORD\"]\n",
     "\n",
     "conn = GraphDatabase.driver(host,auth=(username,password))\n"
    ]
@@ -45,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputText = input(\"Enter title: \")"
+    "inputText = \"phantom\""
    ]
   },
   {
@@ -62,59 +64,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 482,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.         0.         0.         0.18898224 0.53452248 0.11952286\n",
-      " 0.26726124 0.37796447 0.65465367 0.         0.75592895 1.\n",
-      " 0.         0.37796447 0.18898224 0.         0.         0.21821789\n",
-      " 0.26726124 0.37796447 0.21821789 0.21821789 0.65465367 0.\n",
-      " 0.53452248 0.37796447 0.53452248 0.37796447 0.65465367 0.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with conn.session() as session:\n",
-    "    res = \"MATCH (a:Anime) RETURN a.title AS title, a.genre AS genre, a.rating as rating,a.studio AS studio, a.show_type AS show_type\"\n",
+    "def run_recommendation(inputText):\n",
     "\n",
-    "    query = session.run(res)\n",
+    "    with conn.session() as session:\n",
+    "        res = \"MATCH (a:Anime) RETURN a.title AS title, a.genre AS genre, a.rating as rating,a.studio AS studio, a.show_type AS show_type\"\n",
+    "        # for i in res:\n",
+    "        #     print(i)\n",
+    "        query = session.run(res)\n",
     "\n",
-    "    data = [(row['title'],row['genre'],row['rating'],row['studio'],row['show_type'])for row in query]\n",
+    "        data = [(row['title'],row['genre'],row['rating'],row['studio'],row['show_type'])for row in query]\n",
     "\n",
-    "    empList = list()\n",
-    "    for title,genre,rating,studio,show_type in data:\n",
-    "        genre_split = [i for i in genre]\n",
-    "        empList.append((title,\", \".join(genre_split),rating,studio,show_type))\n",
+    "        empList = list()\n",
+    "        for title,genre,rating,studio,show_type in data:\n",
+    "            genre_split = [i for i in genre]\n",
+    "            empList.append((title,\", \".join(genre_split),rating,studio,show_type))\n",
     "\n",
-    "    genres = [genre for _, genre, _, _ ,_ in empList]\n",
+    "        genres = [genre for _, genre, _, _ ,_ in empList]\n",
     "\n",
-    "    count_vec = CountVectorizer(binary=True)\n",
-    "    matrix = count_vec.fit_transform(genres).todense()\n",
-    "    np_array = np.asarray(matrix)\n",
+    "        count_vec = CountVectorizer(binary=True)\n",
+    "        matrix = count_vec.fit_transform(genres).todense()\n",
+    "        np_array = np.asarray(matrix)\n",
     "\n",
-    "    similarity_matrix =  cosine_similarity(np_array)\n",
-    "    title_index = None\n",
-    "    for i, (title, _, _,_,_) in enumerate(empList):\n",
-    "        if title == inputText :\n",
-    "            title_index = i\n",
-    "            break\n",
+    "        similarity_matrix = cosine_similarity(np_array)\n",
+    "        title_index = None\n",
+    "        similarity_scores = None\n",
     "\n",
-    "    similarity_scores = similarity_matrix[title_index]\n",
-    "    print(similarity_matrix[title_index])\n",
-    "    \n",
-    "    top_indices = similarity_scores.argsort()[::1][:-7:-1]\n",
-    "    recList = []\n",
-    "    \n",
-    "    recommendation = [(empList[i], similarity_scores[i]) for i in top_indices]\n",
-    "    recList.append(recommendation)\n",
+    "        for i in range(len(empList)):\n",
+    "            title = empList[i][0]\n",
+    "           \n",
+    "            sim = SequenceMatcher(None,inputText,title).ratio()\n",
     "\n",
-    "    recommendations = recList[-6:]\n",
+    "            if sim > 0.4:\n",
+    "                title_index = i\n",
+    "                break\n",
+    "     \n",
     "\n",
-    "\n"
+    "        if title_index is not None:\n",
+    "            similarity_scores = similarity_matrix[title_index]\n",
+    "            top_indices = np.argsort(similarity_scores)[::-1]\n",
+    "            \n",
+    "            recommendation = [[list(empList[i]),similarity_scores[i]*100] for i in top_indices if similarity_scores[i]>0.7]\n",
+    "          \n",
+    "            \n",
+    "            res = {\n",
+    "                \"status\" : 200,\n",
+    "                \"body\" : recommendation\n",
+    "            }\n",
+    "        else:\n",
+    "            res = {\n",
+    "                \"status\" : 400,\n",
+    "                \"body\" : \"Not Found\"\n",
+    "            }\n",
+    "        return res"
    ]
   },
   {
@@ -127,31 +132,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 483,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 200,\n",
+       " 'body': [[['Phantom of the Idol',\n",
+       "    'Comedy, Supernatural',\n",
+       "    6.75,\n",
+       "    ' Studio Gokumi',\n",
+       "    'TV Show'],\n",
+       "   99.99999999999997],\n",
+       "  [['Osomatsu-san: Hipipo-Zoku to Kagayaku Kajitsu',\n",
+       "    'Comedy',\n",
+       "    6.42,\n",
+       "    'Pierrot',\n",
+       "    'Movie'],\n",
+       "   70.71067811865474],\n",
+       "  [['Chibiham, Juicy & Me', 'Comedy', 'N/A', 'N/A', 'Movie'],\n",
+       "   70.71067811865474],\n",
+       "  [['Musasi-no', 'Comedy', 4.69, ' A-Real', 'TV Show'], 70.71067811865474]]}"
+      ]
+     },
+     "execution_count": 483,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_recommendation(inputText)   \n",
+    "\n",
+    "# sim = SequenceMatcher(None,\"Call of the Night\",\"Call Of\") .ratio()\n",
+    "\n",
+    "\n",
+    "# print(sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Lucifer and the Biscuit Hammer', 'Action, Adventure, Comedy, Drama', 5.64, 'NAZ', 'TV Show'), 0.7559289460184544]\n",
-      "[('Shanhai Jing: Zaijian Gaoshou', 'Adventure, Comedy, Fantasy', 'N/A', 'N/A', 'Movie'), 0.6546536707079772]\n",
-      "[('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.6546536707079772]\n",
-      "[('New Gods: Yang Jian', 'Action, Adventure, Fantasy', 6.97, 'Light Chaser Animation Studios', 'Movie'), 0.6546536707079772]\n",
-      "[('My Precious Lunch', 'Action, Fantasy', 6.35, 'N/A', 'Movie'), 0.5345224838248487]\n"
+      "0.4444444444444444\n"
      ]
     }
    ],
    "source": [
-    "for i in recommendations:\n",
-    "    del i[0]\n",
-    "    for items in i:\n",
-    "        items = list(items)\n",
-    "        show = items\n",
-    "        print(show)\n",
+    "sim = SequenceMatcher(None,\"drift\",\"Drifting Home\") .ratio()\n",
     "\n",
-    "        \n",
-    "    "
+    "\n",
+    "print(sim)"
    ]
   }
  ],
